--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "install": "^0.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
