fix: write a new README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mini-seller-console",
+  "name": "mini-seller-console-by-felipe",
   "private": true,
   "version": "0.0.0",
   "type": "module",
